--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="icon.jpeg">
     <h3>Portfolio</h3>
     <p>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\SelfIntro.html" name="SelfIntro" style="color:chocolate;margin:10px;">SelfIntroduction</a></h6>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Education_Details.html" name="Education_Details" style=color:chocolate;margin:10px;">Education_Details</a>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Certifications.html" name="Certifications" style="color:chocolate;margin: 10px;">Certifications</a>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Projects.html" name="Projects" style="color:chocolate;margin: 10px;">Projects</a>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Skills.html" name="skills" style="color:chocolate;margin: 10px;">Skills</a>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Resume.html" name="Resume" style="color:chocolate;margin: 10px;">Resume</a>
-        <a href="C:\Users\Pavani\OneDrive\Desktop\HTML\Contact_Me.html" name="ContactMe" style="color:chocolate;margin: 10px;">Contact_Me</a>
-        <img src="C:\Users\Pavani\OneDrive\Desktop\HTML\imgonline-com-ua-ReplaceColor-gHCKrxftIPQn4YV-modified (1).png"
+        <a href="SelfIntro.html" name="SelfIntro" style="color:chocolate;margin:10px;">SelfIntroduction</a></h6>
+        <a href="Education_Details.html" name="Education_Details" style=color:chocolate;margin:10px;">Education_Details</a>
+        <a href="Certifications.html" name="Certifications" style="color:chocolate;margin: 10px;">Certifications</a>
+        <a href="Projects.html" name="Projects" style="color:chocolate;margin: 10px;">Projects</a>
+        <a href="Skills.html" name="skills" style="color:chocolate;margin: 10px;">Skills</a>
+        <a href="Resume.html" name="Resume" style="color:chocolate;margin: 10px;">Resume</a>
+        <a href="Contact_Me.html" name="ContactMe" style="color:chocolate;margin: 10px;">Contact_Me</a>
+        <img src="imgonline-com-ua-ReplaceColor-gHCKrxftIPQn4YV-modified (1).png"
         height="500px" width="500px">
    </p>
 </head>
