--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="C:\Users\Pavani\OneDrive\Desktop\HTML\style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
     <link rel="icon" href="icon.jpeg">
     <h3>Portfolio</h3>
