--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -8,7 +8,7 @@
             background-size: cover;
         }
     </style>
-    <link rel="stylesheet" href="C:\Users\Pavani\OneDrive\Desktop\HTML\sheet.css">
+    <link rel="stylesheet" href="sheet.css">
     <link rel="icon" href="icon.jpeg">
     <title>Contact_Me</title>
     <h1>Contact_Me</h1>
