--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        h1{
+    color:plum;
+    font-family:cursive;
+    text-align:center;
+    
+}
+h2{
+    color:darkmagenta;
+    font-family:cursive;
+    font-size: 60px;
+}
+h3{
+    color: #0291bc;
+    font-size: 50px;
+    font-family:'Times New Roman', Times, serif;
+}
+h5{
+    color:cadetblue;
+    font-size: 35px;
+}
+h6{
+    color:#2193b0;
+    font-size: 20px;
+}
+p{
+    color: rgb(222, 16, 95);
+    font-family: sans-serif;
+    font-size: medium;
+    margin-top: 50px;
+}
+img{
+    float:right;
+    margin: 50px;
+}
+body{
+    background-image: url(c.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    </style>
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
     <link rel="icon" href="icon.jpeg">
