--- a/SelfIntro.html
+++ b/SelfIntro.html
@@ -43,8 +43,8 @@ p{
         Apart from this I'm techincally good at C, Java,Python(Basics),SQL,HTML and CSS.
         During my academic days I have done a major project on "Traffic sign detection in a self driving car using Deep Learning"
         Coming to my hobbies I like listening to music and watching movies.
-        Coming to my family details I have a family of four members. My father name is Krishna Reddy and he us a farmer.
-        My mother name is Venkata Subbammma and she is a homemaker and i have an younger sister and she is currentlu pursuing her 
+        Coming to my family details I have a family of four members. My father name is Krishna Reddy and he is a farmer.
+        My mother name is Venkata Subbammma and she is a homemaker and i have an younger sister and she is currently pursuing her 
         Intermediate.
         My short term goal is to get placed in a reputed organisation and my long term goal is to be in a better position where I work.
     </pre>
