--- a/Certifications.html
+++ b/Certifications.html
@@ -20,15 +20,15 @@
         <title>
             Certifications
         </title>
-        <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScY5epIP10KQoDBsaR435SjbtbvdI527p1zg&usqp=CAU">
+        <link rel="icon" href="icon.jpeg">
         <h1><u><b>Certifications</b></u></h1>
     </head>
     <body>
         <p>
             NPTEL Certification on DBMS.<br>
-            <a href="C:\Users\Pavani\OneDrive\Documents\Pavani docs\NPTEL.pdf">Click here</a><br><br>
+            <a href="NPTEL.pdf">Click here</a><br><br>
             HackerRank Certification on Java(Basics).<br>
-            <a href="C:\Users\Pavani\OneDrive\Documents\Pavani docs\java_basic certificate.pdf">Click here</a><br><br>
+            <a href="java_basic certificate.pdf">Click here</a><br><br>
             Completed 3 months of training on FULL STACK WEB DEVELOPMENT in Tap Academy.
         </p>
         
